@@ -1,4 +1,6 @@
 ver 0.15.8 (2009/??/??)
+* input:
+  - curl: allow rewinding with Icy-Metadata
 * decoders:
   - ffmpeg, flac, vorbis: added more flac/vorbis MIME types
 
